--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,6 @@
 [versions]
 agp = "8.11.0"
+cast = "1.3.1"
 coreSplashscreen = "1.0.1"
 exoplayerSmoothstreaming = "2.19.1"
 kotlin = "2.0.21"
@@ -14,8 +15,11 @@ constraintlayout = "2.2.1"
 media3Exoplayer = "1.7.1"
 media3Ui = "1.2.1"
 media3UiVersion = "1.7.1"
+mediarouter = "1.8.1"
+playServicesCastFramework = "22.1.0"
 
 [libraries]
+androidx-cast = { module = "androidx.media3:cast", version.ref = "cast" }
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 androidx-core-splashscreen = { module = "androidx.core:core-splashscreen", version.ref = "coreSplashscreen" }
 androidx-media3-exoplayer = { module = "androidx.media3:media3-exoplayer", version.ref = "media3Ui" }
@@ -25,6 +29,7 @@ androidx-media3-exoplayer-v171 = { module = "androidx.media3:media3-exoplayer", 
 androidx-media3-ui = { module = "androidx.media3:media3-ui", version.ref = "media3Ui" }
 androidx-media3-ui-compose = { module = "androidx.media3:media3-ui-compose", version.ref = "media3Exoplayer" }
 androidx-media3-ui-v171 = { module = "androidx.media3:media3-ui", version.ref = "media3UiVersion" }
+androidx-mediarouter = { module = "androidx.mediarouter:mediarouter", version.ref = "mediarouter" }
 exoplayer-smoothstreaming = { module = "com.google.android.exoplayer:exoplayer-smoothstreaming", version.ref = "exoplayerSmoothstreaming" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
@@ -33,6 +38,7 @@ androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 androidx-activity = { group = "androidx.activity", name = "activity", version.ref = "activity" }
 androidx-constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
+play-services-cast-framework = { group = "com.google.android.gms", name = "play-services-cast-framework", version.ref = "playServicesCastFramework" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
